--- a/jacktrip/documentation/html_footer.html
+++ b/jacktrip/documentation/html_footer.html
@@ -13,7 +13,7 @@ Chris Chafe<br />
 <a href="http://www.stanford.edu/" title="Stanford home">Stanford University</a>
 </font>
 <p>
-<a href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=236811&amp;type=1" width="88" height="31" border="0" alt="SourceForge.net Logo" /></a>
+<a href="http://sourceforge.net">SourceForge</a>
 </p>
 </center>
 </footer>
